--- a/index.html
+++ b/index.html
@@ -128,18 +128,11 @@
                 * The on screen UI needs to be the last one
                 */
 
-                this.fireUI = this.add.image(0,0,'fireUI');
-                this.fireUI.setVisible(false);
-                this.fireUI.setScrollFactor(0);
-
-                this.waterUI = this.add.image(0,0,'waterUI');
-                this.waterUI.setVisible(false);
-                this.waterUI.setScrollFactor(0);
-
                 for(let holder in this.spellHolders) {
                     let x = this.spellHolders[holder].x;
                     let y = this.spellHolders[holder].y;
                     var sh = this.add.image(x, y, 'spell-holder').setScale(3);
+                    sh.setDepth(1);
                     sh.setScrollFactor(0);
                 }
 
@@ -183,46 +176,36 @@
                 //Spell selection
                 if (Phaser.Input.Keyboard.JustDown(cursors.firstSpell)) {
                     if(this.spellsStorage.length >= 3) {
-                        this.spellsStorage.pop();
+                        var lastSpell = this.spellsStorage.pop();
+                        if(lastSpell.image) {
+                            lastSpell.image.destroy();
+                        }
                     }
-                    this.spellsStorage.unshift('fire');
+                    //Add element to array
+                    this.spellsStorage.unshift({
+                        name: 'fire',
+                        imageName: 'fireUI'
+                    });
 
-                    //Daca e primul spell, atunci ocupam primul slot
-                    // var slot;
-                    // this.spellsStorage.forEach((spell, i) => {
-                    //     switch(i){
-                    //         case 0:
-                    //             slot = this.spellHolders['holder1'];
-                    //             if(spell == 'fire') {
-                    //                 this.fireUI.x = slot.x;
-                    //                 this.fireUI.y = slot.y;
-                    //                 this.fireUI.setVisible(true);
-                    //                 this.fireUI.setScale(3);
-                    //             }
-                    //             break;
-                    //         case 1:
-                    //             slot = this.spellHolders['holder2'];
-                    //             if(spell == 'fire') {
-                    //                 this.fireUI.x = slot.x;
-                    //                 this.fireUI.y = slot.y;
-                    //                 this.fireUI.setVisible(true);
-                    //                 this.fireUI.setScale(3);
-                    //             }
-                    //             break;
-                    //         case 2:
-                    //             break;
-                    //     }
-                    // });
-                    //Daca e al doilea spell atunci mutam primul slot pe al doilea, si il ocupam pe primul
+                    this.addSpellImageToUI();
 
                     console.log(this.spellsStorage);
                 }
 
                 if (Phaser.Input.Keyboard.JustDown(cursors.secondSpell)) {
                     if(this.spellsStorage.length >= 3) {
-                        this.spellsStorage.pop();
+                        var lastSpell = this.spellsStorage.pop();
+                        if(lastSpell.image) {
+                            lastSpell.image.destroy();
+                        }
                     }
-                    this.spellsStorage.unshift('water');
+                    //Add element to array
+                    this.spellsStorage.unshift({
+                        name: 'water',
+                        imageName: 'waterUI'
+                    });
+                    this.addSpellImageToUI();
+
                     console.log(this.spellsStorage);
                 }
 
@@ -279,9 +262,9 @@
                 let matches = 0;
                 let armorTypesTemp = [...enemy.armorTypes]; //Create a copy of the enemy's armor types
                 this.spellsStorage.forEach((spell, i) => { //Loop over the selected spells
-                    if(armorTypesTemp.includes(this.spellsStorage[i])) {
+                    if(armorTypesTemp.includes(spell.name)) {
                         matches++;
-                        var index = armorTypesTemp.indexOf(this.spellsStorage[i]);
+                        var index = armorTypesTemp.indexOf(spell.name);
                         armorTypesTemp.splice(index, 1); //Delete the current type of armor from the temporary array in order to avoid reiterating over it and adding additional damage
                     }
                 });
@@ -317,6 +300,34 @@
 
                 let enemy = new Enemy(this, x, y, 'flying-shadow');
                 this.enemiesGroup.add(enemy);
+            }
+
+            addSpellImageToUI() {
+                var slot;
+                this.spellsStorage.forEach((spell, i) => {
+                    if(!spell.image) {
+                        spell.image = this.add.image(0,0,spell.imageName);
+                        spell.image.setScrollFactor(0);
+                        spell.image.setDepth(0);
+                    }
+                    
+                    switch(i){
+                        case 0:
+                            slot = this.spellHolders['holder1'];
+                            break;
+                        case 1:
+                            slot = this.spellHolders['holder2'];
+                            break;
+                        case 2:
+                            slot = this.spellHolders['holder3'];
+                            break;
+                    }
+
+                    spell.image.x = slot.x;
+                    spell.image.y = slot.y;
+                    spell.image.setVisible(true);
+                    spell.image.setScale(3);
+                });
             }
         }
 
