--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <script type="module">
-
+        //randomize enemy creation
         import Enemy from '/Scripts/Enemy.js';
         import Player from '/Scripts/Player.js';
         import * as Setup from '/Scripts/Setup.js';
@@ -30,11 +30,15 @@
                 this.spells = null;
                 this.scoreText = null;
                 this.isGameOver = false;
+                this.leftMouseJustDown = false;
+                this.rightMouseJustDown = false;
                 this.spellsStorage = [];
                 this.spellHolders = {
-                    holder1: {x:325,y:50}, 
-                    holder2: {x:400,y:50},
-                    holder3: {x:475,y:50},
+                    holder1: {x:375,y:50}, 
+                    holder2: {x:450,y:50},
+                    // holder1: {x:325,y:50}, 
+                    // holder2: {x:400,y:50},
+                    // holder3: {x:475,y:50},
                 };
                 
             }
@@ -50,6 +54,8 @@
                 this.load.image('fire', 'Assets/Media/Finished/fire.png');
                 this.load.image('fireUI', 'Assets/Media/Finished/fireUI.png');
                 this.load.image('waterUI', 'Assets/Media/Finished/waterUI.png');
+                this.load.image('airUI', 'Assets/Media/Finished/airUI.png');
+                this.load.image('earthUI', 'Assets/Media/Finished/earthUI.png');
                 this.load.image('spell-holder', 'Assets/Media/Finished/spell-holder.png');
                 this.load.spritesheet('dude', 'Assets/Media/Finished/dude.png', { frameWidth: 32, frameHeight: 48 });
             }
@@ -81,7 +87,7 @@
 
                 //Shooting spell
                 this.time.addEvent({
-                    delay: 2000,
+                    delay: 1000,
                     callback: SpellManager.shootSpell,
                     callbackScope: this,
                     loop:true,
@@ -101,7 +107,18 @@
                     callback: EnemyManager.spawnEnemy,
                     callbackScope: this,
                     loop:true,
-                })
+                });
+
+                //Mouse set-up
+                this.input.on('pointerdown', (pointer) => {
+                    if (pointer.leftButtonDown()) {
+                        this.leftMouseJustDown = true;
+                    }
+
+                    if (pointer.rightButtonDown()) {
+                        this.rightMouseJustDown = true;
+                    }
+                }, this);
 
                 //Physics
                 this.physics.world.setBounds(0,0,Main.BOUNDS_X, Main.BOUNDS_Y);
@@ -144,14 +161,30 @@
                 EnemyManager.aiMovement(this, this.player);
 
                 //Spell selection
+                //Fire
                 if (Phaser.Input.Keyboard.JustDown(cursors.firstSpell)) {
                     SpellManager.addSpellToSlot(this, 'fire', 'fireUI');
                     console.log(this.spellsStorage);
                 }
 
+                //Water
                 if (Phaser.Input.Keyboard.JustDown(cursors.secondSpell)) {
                     SpellManager.addSpellToSlot(this, 'water', 'waterUI');
                     console.log(this.spellsStorage);
+                }
+
+                //Air
+                if(this.leftMouseJustDown == true) {
+                    SpellManager.addSpellToSlot(this, 'air', 'airUI');
+                    console.log(this.spellsStorage);
+                    this.leftMouseJustDown = false;
+                }
+
+                //Earth
+                if(this.rightMouseJustDown == true) {
+                    SpellManager.addSpellToSlot(this, 'earth', 'earthUI');
+                    console.log(this.spellsStorage);
+                    this.rightMouseJustDown = false;
                 }
 
                 //Wand sticks to player
@@ -190,6 +223,7 @@
             width: 800,
             height: 600,
             scene: Main,
+            disableContextMenu: true, //Disable right mouse button menu
             physics: {
                 default: 'arcade',
                 arcade: {
